--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,15 +1,17 @@
-@import './abstracts/variables';
+@import './abstracts/_colors';
 
+@import './base/base';
 @import './base/reset';
 
 @import './layout/navigation';
+@import './layout/content';
+@import './layout/footer';
 
 @import './components/buttons';
 
 @import './pages/app';
-@import './pages/login';
-@import './pages/profile';
-
-@import './themes/theme';
+@import './pages/auth';
 
 @import './utils/mixins';
+
+
