--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -1,8 +1,8 @@
 *,
 *:before,
 *:after {
-  height: 100vh;
-  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 html,
@@ -117,7 +117,7 @@ section {
 }
 
 body {
-  line-height: 1;
+ box-sizing: border-box;
 }
 
 menu,
